--- a/.github/workflows/CI.main.yml
+++ b/.github/workflows/CI.main.yml
@@ -2,7 +2,7 @@
 
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI.main.yml
 
 # Controls when the workflow will run
 on:
