--- a/.github/workflows/CI.main.yml
+++ b/.github/workflows/CI.main.yml
@@ -1,46 +1,18 @@
-# 教學影片：https://youtu.be/a-EiC_Ll3EM?list=RDCMUCPhn2rCqhu0HdktsFjixahA&t=359
-
-# This is a basic workflow to help you get started with Actions
-
-name: CI.main.yml
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  # 當 push 或 pull_request 到 main branch 的時候，會觸發 (trigger) 這個 workflow
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  # 這個 workflow 可以手動觸發 (manually triggerable)
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    # 你的程式要跑在甚麼作業系統上，不同系統有不同的收費方式，Linux系統是最便宜的
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    # 指定這個 job 要執行那些步驟 (steps)
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # checkout 是 GitHub 自己的 Api，checkout 在 $GITHUB_WORKSPACE 下面的 repository
-      # 讓 job 可以存取得到
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      # 跑一個 一行指令 echo 出一行字
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      # 跑出多行指令，echo 出多行字
-      - name: Run a multi-line script
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
