--- a/.github/workflows/CI.main.yml
+++ b/.github/workflows/CI.main.yml
@@ -7,13 +7,26 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
+    # ${{github.event_name:}}: "push event"
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    # ${{runner.os}}: "linux"
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    # ${{github.ref}}: "refs/head/main" 
+    # ${{github.repository}}: "panosaccount/Test_GitHub_Actions"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      
+    # Check out repository code
       - name: Check out repository code
         uses: actions/checkout@v3
+        
+    # ${{github.repository}}: panosaccount/Test_GitHub_Actions
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      
+      - run: echo "[github.workspace] is ${{ github.workkspace }}."
+
+    # ls ${{github.workspace}}: panos
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
