--- a/.github/workflows/_workflow_GitHub-Actions-Demo.yml
+++ b/.github/workflows/_workflow_GitHub-Actions-Demo.yml
@@ -37,8 +37,8 @@ jobs:
     # ls ${{github.workspace}}: 
     # README.md
     # TestGitHubWorkflow
-      - name: _step_List files in the repository    
-        run: |
+      #- name: _step_List files in the repository    
+      - run: |
           ls ${{ github.workspace }}
           
     # #{{ job.status }}: success
