--- a/.github/workflows/_workflow_GitHub-Actions-Demo.yml
+++ b/.github/workflows/_workflow_GitHub-Actions-Demo.yml
@@ -41,5 +41,7 @@ jobs:
       - run: |
           ls ${{ github.workspace }}
           
+      - run: ls ${{ github.workspace }}
+      
     # #{{ job.status }}: success
       - run: echo "🍏 This job's status is ${{ job.status }}."
