--- a/.github/workflows/_workflow_Echo_Contexts.yml
+++ b/.github/workflows/_workflow_Echo_Contexts.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      - uses: actions/checkout@v
+      - uses: actions/checkout@v3
       
       - run: echo "github.action is ${{github.action}}"
   
